# tio

./: .clang-format  .gitignore  .travis.yml  .typos.toml  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  LICENSE  Makefile.am  NEWS  README  README.md  TODO  autogen.sh  configure.ac  meson.build  meson_options.txt  token.txt
.circleci/: config.yml
.github/: FUNDING.yml
.github/workflows/: codeql-buildscript.sh  codeql.yml  macos.yml  ubuntu.yml
example/: config  control-lines-test.lua  tiorc
examples/config/: config
examples/lua/: automatic-linux-login.lua  automatic-login.lua  control-lines-test.lua  lines.lua  pts.lua  pvt.lua  read.lua  read_line.lua  serial-device-search.lua
man/: Makefile.am  gotty.1  meson.build  tio.1  tio.1.in  tio.1.txt
packaging/ubuntu/debian/: changelog  control  copyright  gotty.bash-completion  rules  watch
src/: Makefile.am  alert.c  alert.h  conffile.c  conffile.h  configfile.c  configfile.h  device.c  error.c  error.h  fs.c  fs.h  git-version.h.in  gotty-bash-completion.sh  iossiospeed.c  lineedit.c  log.c  log.h  main.c  meson.build  misc.c  misc.h  options.c  options.h  print.c  print.h  readline.c  readline.h  rs485.c  rs485.h  script.c  script.h  setspeed.c  setspeed.h  setspeed2.c  signals.c  signals.h  socket.c  socket.h  time.c  (+7 more)
src/bash-completion/: gotty  meson.build  tio  tio.in
src/include/: config.h
src/include/gotty/: device.h  log.h  options.h  print.h  time.h  tty.h
src/include/tio/: error.h  lineedit.h  log.h  options.h  print.h  time.h  tty.h
subprojects/: libinih.wrap
